redoing + TableAreaIntegrationTest
redoing or updating some classes/interfaces for compatibility + implementing integration test for TableArea and its collaborants